plugins {
    id 'java'
    id 'io.quarkus'
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation 'org.apache.camel.quarkus:camel-quarkus-json-validator'
    implementation enforcedPlatform("${quarkusPlatformGroupId}:quarkus-camel-bom:${quarkusPlatformVersion}")
    implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")

    implementation 'io.quarkus:quarkus-grpc'
//    implementation 'io.quarkus:quarkus-hibernate-reactive-panache'
//    implementation 'io.quarkus:quarkus-reactive-pg-client'
    implementation 'io.quarkus:quarkus-arc'
    implementation project(path: ':auth-data')
    testImplementation 'io.quarkus:quarkus-junit5'

    implementation 'io.quarkus:quarkus-hibernate-orm'
    implementation 'io.quarkus:quarkus-jdbc-postgresql'
    implementation 'io.quarkus:quarkus-spring-data-jpa'
    //implementation 'io.quarkus:quarkus-spring-data-jpa'

    // JOSE
    implementation 'io.quarkus:quarkus-smallrye-jwt-build'

    // Security (password hashing)
    implementation group: 'org.springframework.security', name: 'spring-security-core', version: '6.0.3'

}

group 'com.cartobucket.auth'
version '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

test {
    systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
}
compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
}

compileTestJava {
    options.encoding = 'UTF-8'
}
